k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coreapps
  labels:
    name: coreapps
    environment: production
